src/main/java/org/example/breakoutdrop/Errors/ClientHTTP/Forbidden403.java
package org.example.breakoutdrop.Errors.ClientHTTP;

public class Forbidden403 extends RuntimeException {
    public Forbidden403(String message) {
        super(message);
    }
}
